# journal-viewer

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  conanfile.py  vcpkg.json
.github/workflows/: develop-build.yml  release.yml
cmake/: DeclareDependencyProvider.cmake  Dependencies.cmake
cmake/overlays/fmt/: README.md  portfile.cmake  vcpkg.json
core/: CMakeLists.txt  core.cpp  logger.cpp
core/include/journal/: logger.hpp  lru_cache.hpp  task.hpp
journal/: CMakeLists.txt  async.hpp  async_journal_log_manager.cpp  async_journal_log_manager.hpp  journal_cache.hpp  journal_cursor_cache.cpp  journal_cursor_cache.hpp  journal_entry.cpp  journal_entry.hpp  journal_info.cpp  journal_info.hpp  journal_instance.cpp  journal_instance.hpp  journal_instance_handle.hpp  journal_log_manager.cpp  journal_log_manager.hpp  journal_lru_entry_chunk_cache.hpp  journal_lru_entry_chunk_cache_new.hpp  lru_cache.hpp  result.hpp  version.hpp.in
journal-viewer/: CMakeLists.txt  about_window.cpp  about_window.hpp  app_state.cpp  app_state.hpp  file_browser.cpp  file_browser.hpp  journal_log_window.cpp  journal_log_window.hpp  main.cpp  sdl_pointers.hpp  window_facade.hpp
journal/details/: sd_journal.hpp
